# QuickChar

./: README.md  chardata  charpaste.py  meson.build  quickchar  quickchar-autostart.desktop  quickchar.bde  raise.sh
data/: chardata  meson.build  meson_post_install.py  org.ubuntubudgie.quickchar.metainfo.xml.in  quickchar-autostart.desktop  quickchar.bde  quickchar.desktop  quickchar.desktop.in
schema/: org.ubuntubudgie.quickchar.gschema.xml
src/: quickchar
